--- a/single-project/build.gradle
+++ b/single-project/build.gradle
@@ -14,6 +14,9 @@ dependencies {
 
 release {
     tagTemplate = '$name-$version'
+    git {
+        requireBranch = ''
+    }
 }
 
 task(startmessage) << {
